# ms-learn-pytorch

./: .gitmodules  pyproject.toml
.devcontainer/: devcontainer.json
src/: 01_tensors.ipynb
src/cahpter_02/: section2_1_boston_EDA.ipynb
