[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = { extras = ["jupyter"], version = "*" }
isort = "*"
jupyter = "*"
mypy = "*"
pytest = "*"
pytest-mock = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.pylint.MASTER]
disable = ["wrong-import-position", "line-too-long"]
